# autoware_universe.mock

./: .cspell.json  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  workflow_sync_setting.yaml
.github/: labeler.yaml
.github/workflows/: build-and-test-differential.yaml  clang-tidy-differential.yaml  sync-workflows.yaml
scripts/: sync_workflows.py
